# docker-dist-nn

./: .gitignore  MNIST_Handwritten_digits_classification_using.ipynb  MNIST_Handwritten_digits_classification_using_FCNN.ipynb  README.md  config_cali_housing.json  config_mnist.json  example_inputs_cali.json  generate_cali_housing_config.py  logs.py  main.py  neuron.py  pyproject.toml  run_chain.py  run_fcnn.py  run_inference.py
config/: config_cali.json  config_cali_2.json  config_cali_3.json  config_mnist.json  config_sample.json
config/example_inputs/: example_inputs_cali.json  example_inputs_mnist.json  example_inputs_sample.json
grpc-dist/: dockerfile  grpc_node.py  run_grpc_fcnn.py  run_grpc_inference.py
grpc-dist/proto/: dist_nn.proto  dist_nn_pb2_grpc.py
horizontal-dist/: dockerfile  horizontal_node.py  run_horizontal_fcnn.py  run_horizontal_inference.py
layer/: dockerfile  layer.py  run_fcnn_layer.py  run_inference_layer.py
neuron/: neuron.py  run_fcnn.py  run_inference.py
neuron-dist/: dockerfile  run_fcnn.py  run_inference.py
notebooks/: Cali_Housing_Prices_Prediction.ipynb  generate_cali_housing_config.py  generate_mnist_tensorflow.py
scripts/: Centralized_MNIST_Experimentation.ipynb  generate_mnist_pytorch.py  manual_nn.py
src/: grpc_node.py  run_grpc_fcnn.py  run_grpc_inference.py
src/proto/: dist_nn_pb2.py
vertical-dist/: dockerfile  run_vertical_fcnn.py  run_vertical_inference.py  vertical_node.py
